# ai-escrow

./: .gitignore  README.md  deno.json  env.example  genlayer.json  main.ts  pyproject.toml  requirements.txt
contracts/: ai_escrow.py
docs/: FLOW.md
frontend/: index.html
scripts/: deploy.py  interact.py
tests/: Simulation Tests  approve.json  test_majority_vote.py
