[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-escrow"
version = "1.0.0"
description = "AI-powered freelance escrow with multi-LLM dispute resolution"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "genlayer>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["contracts*", "scripts*"]
